[package]
name = "bs1770"
description = "Loudness analysis conforming to ITU-R BS.1770-4"
categories = ["multimedia::audio"]
keywords = ["bs1770", "audio", "loudness"]

version = "1.0.0"
edition = "2018"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
license = "Apache-2.0"

homepage = "https://github.com/ruuda/bs1770#readme"
repository = "https://github.com/ruuda/bs1770"
documentation = "https://docs.rs/bs1770"
readme = "README.md"

[dev-dependencies]
# For the album loudness analysis example.
claxon = "0.4.3"

# For loading the EBU Tech 3441 reference samples in the test suite.
hound = "3.4.0"

# For copy_file_range, to be able to update metadata while preserving sharing.
libc = "0.2.76"

[profile.dev]
panic = "abort"

[profile.release]
# If we use parallel codegen, Claxon does not get optimized properly,
# and the result will be slow, so disable parallel codegen.
codegen-units = 1
panic = "abort"
